// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/Modal > BackgroundScroll 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      data-overlay-container="true"
    >
      <div
        aria-hidden="true"
        style="height: 1024px;"
      >
        <button
          class="charcoal-button"
        >
          Open Modal
        </button>
      </div>
      <div
        class="charcoal-modal-background"
        data-bottom-sheet="false"
        style="z-index: 10;"
      >
        <div
          class="charcoal-modal-dialog"
          data-bottom-sheet="false"
          data-size="M"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="charcoal-modal-header-root"
            data-bottom-sheet="false"
          >
            <div
              class="charcoal-modal-header-title"
            >
              react/Title
            </div>
          </div>
          <div
            class="charcoal-modal-body"
          >
            <div
              style="display: grid; gap: 24px;"
            >
              <div
                style="font-size: 14px; line-height: 22px; padding: 0px 16px;"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
              </div>
              <div
                class="charcoal-modal-align"
              >
                <div
                  aria-disabled="false"
                  class="charcoal-text-field-root"
                >
                  <div
                    class="charcoal-field-label-root"
                  >
                    <label
                      class="charcoal-field-label"
                      for="test-id"
                      id="test-id"
                    >
                      Name
                    </label>
                    <div
                      class="charcoal-field-label-sub-label"
                    >
                      <span />
                    </div>
                  </div>
                  <div
                    class="charcoal-text-field-container"
                    data-invalid="false"
                  >
                    <input
                      aria-labelledby="test-id"
                      class="charcoal-text-field-input"
                      data-invalid="false"
                      id="test-id"
                      placeholder="Nagisa"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="charcoal-modal-align"
              >
                <div
                  aria-disabled="false"
                  class="charcoal-text-field-root"
                >
                  <div
                    class="charcoal-field-label-root"
                  >
                    <label
                      class="charcoal-field-label"
                      for="test-id"
                      id="test-id"
                    >
                      Country
                    </label>
                    <div
                      class="charcoal-field-label-sub-label"
                    >
                      <span />
                    </div>
                  </div>
                  <div
                    class="charcoal-text-field-container"
                    data-invalid="false"
                  >
                    <input
                      aria-labelledby="test-id"
                      class="charcoal-text-field-input"
                      data-invalid="false"
                      id="test-id"
                      placeholder="Tokyo"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="charcoal-modal-align"
              >
                <div
                  class="charcoal-dropdown-selector-root"
                >
                  <div
                    class="charcoal-field-label-root"
                  >
                    <label
                      class="charcoal-field-label"
                      id="test-id"
                    >
                      Fruits
                    </label>
                    <div
                      class="charcoal-field-label-sub-label"
                    >
                      <span />
                    </div>
                  </div>
                  <div
                    aria-hidden="true"
                    style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <select
                      tabindex="-1"
                    >
                      <option
                        value="10"
                      >
                        10
                      </option>
                      <option
                        value="20"
                      >
                        20
                      </option>
                      <option
                        value="30"
                      >
                        30
                      </option>
                    </select>
                  </div>
                  <button
                    aria-labelledby="test-id"
                    class="charcoal-dropdown-selector-button"
                    data-active="false"
                    type="button"
                  >
                    <span
                      class="charcoal-ui-dropdown-selector-text"
                      data-placeholder="false"
                    >
                      Apple
                    </span>
                    <pixiv-icon
                      class="charcoal-ui-dropdown-selector-icon"
                      name="16/Menu"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="charcoal-modal-buttons"
            >
              <button
                class="charcoal-button"
                data-full-width="true"
                data-variant="Primary"
              >
                Apply
              </button>
              <button
                class="charcoal-button"
                data-full-width="true"
              >
                Cancel
              </button>
            </div>
          </div>
          <button
            aria-label="Close"
            class="charcoal-icon-button charcoal-modal-close-button"
            data-active="false"
            data-size="S"
            data-variant="Default"
            type="button"
          >
            <pixiv-icon
              name="24/Close"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/Modal > BottomSheet 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      data-overlay-container="true"
    >
      <button
        aria-hidden="true"
        class="charcoal-button"
      >
        Open Modal
      </button>
      <div
        class="charcoal-modal-background"
        data-bottom-sheet="true"
        style="z-index: 10;"
      >
        <div
          class="charcoal-modal-dialog"
          data-bottom-sheet="true"
          data-size="M"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="charcoal-modal-header-root"
            data-bottom-sheet="true"
          >
            <div
              class="charcoal-modal-header-title"
            >
              react/Title
            </div>
          </div>
          <div
            class="charcoal-modal-body"
          >
            <div
              style="display: grid; gap: 24px;"
            >
              <div
                style="font-size: 14px; line-height: 22px; padding: 0px 16px;"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
              </div>
            </div>
            <div
              class="charcoal-modal-buttons"
            >
              <label
                class="charcoal-checkbox__label"
                for="test-id"
              >
                <input
                  checked=""
                  class="charcoal-checkbox-input"
                  id="test-id"
                  type="checkbox"
                />
                <div
                  class="charcoal-checkbox__label_div"
                >
                  test checkbox
                </div>
              </label>
              <button
                class="charcoal-button"
                data-full-width="true"
                data-variant="Danger"
              >
                削除する
              </button>
              <button
                class="charcoal-button"
                data-full-width="true"
              >
                キャンセル
              </button>
            </div>
          </div>
          <button
            aria-label="Close"
            class="charcoal-icon-button charcoal-modal-close-button"
            data-active="false"
            data-size="S"
            data-variant="Default"
            type="button"
          >
            <pixiv-icon
              name="24/Close"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/Modal > Default 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      data-overlay-container="true"
    >
      <button
        aria-hidden="true"
        class="charcoal-button"
      >
        Open Modal
      </button>
      <div
        class="charcoal-modal-background"
        data-bottom-sheet="false"
        style="z-index: 10;"
      >
        <div
          class="charcoal-modal-dialog"
          data-bottom-sheet="false"
          data-size="M"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="charcoal-modal-header-root"
            data-bottom-sheet="false"
          >
            <div
              class="charcoal-modal-header-title"
            >
              react/Title
            </div>
          </div>
          <div
            class="charcoal-modal-body"
          >
            <div
              style="display: grid; gap: 24px;"
            >
              <div
                style="font-size: 14px; line-height: 22px; padding: 0px 16px;"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
              </div>
              <div
                class="charcoal-modal-align"
              >
                <div
                  aria-disabled="false"
                  class="charcoal-text-field-root"
                >
                  <div
                    class="charcoal-field-label-root"
                  >
                    <label
                      class="charcoal-field-label"
                      for="test-id"
                      id="test-id"
                    >
                      Name
                    </label>
                    <div
                      class="charcoal-field-label-sub-label"
                    >
                      <span />
                    </div>
                  </div>
                  <div
                    class="charcoal-text-field-container"
                    data-invalid="false"
                  >
                    <input
                      aria-labelledby="test-id"
                      class="charcoal-text-field-input"
                      data-invalid="false"
                      id="test-id"
                      placeholder="Nagisa"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="charcoal-modal-align"
              >
                <div
                  aria-disabled="false"
                  class="charcoal-text-field-root"
                >
                  <div
                    class="charcoal-field-label-root"
                  >
                    <label
                      class="charcoal-field-label"
                      for="test-id"
                      id="test-id"
                    >
                      Country
                    </label>
                    <div
                      class="charcoal-field-label-sub-label"
                    >
                      <span />
                    </div>
                  </div>
                  <div
                    class="charcoal-text-field-container"
                    data-invalid="false"
                  >
                    <input
                      aria-labelledby="test-id"
                      class="charcoal-text-field-input"
                      data-invalid="false"
                      id="test-id"
                      placeholder="Tokyo"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="charcoal-modal-align"
              >
                <div
                  class="charcoal-dropdown-selector-root"
                >
                  <div
                    class="charcoal-field-label-root"
                  >
                    <label
                      class="charcoal-field-label"
                      id="test-id"
                    >
                      Fruits
                    </label>
                    <div
                      class="charcoal-field-label-sub-label"
                    >
                      <span />
                    </div>
                  </div>
                  <div
                    aria-hidden="true"
                    style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <select
                      tabindex="-1"
                    >
                      <option
                        value="10"
                      >
                        10
                      </option>
                      <option
                        value="20"
                      >
                        20
                      </option>
                      <option
                        value="30"
                      >
                        30
                      </option>
                    </select>
                  </div>
                  <button
                    aria-labelledby="test-id"
                    class="charcoal-dropdown-selector-button"
                    data-active="false"
                    type="button"
                  >
                    <span
                      class="charcoal-ui-dropdown-selector-text"
                      data-placeholder="false"
                    >
                      Apple
                    </span>
                    <pixiv-icon
                      class="charcoal-ui-dropdown-selector-icon"
                      name="16/Menu"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="charcoal-modal-buttons"
            >
              <button
                class="charcoal-button"
                data-full-width="true"
                data-variant="Primary"
              >
                Apply
              </button>
              <button
                class="charcoal-button"
                data-full-width="true"
              >
                Cancel
              </button>
            </div>
          </div>
          <button
            aria-label="Close"
            class="charcoal-icon-button charcoal-modal-close-button"
            data-active="false"
            data-size="S"
            data-variant="Default"
            type="button"
          >
            <pixiv-icon
              name="24/Close"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/Modal > FullBottomSheet 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      data-overlay-container="true"
    >
      <button
        aria-hidden="true"
        class="charcoal-button"
      >
        Open Modal
      </button>
      <div
        class="charcoal-modal-background"
        data-bottom-sheet="full"
        style="z-index: 10;"
      >
        <div
          class="charcoal-modal-dialog"
          data-bottom-sheet="full"
          data-size="M"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="charcoal-modal-header-root"
            data-bottom-sheet="full"
          >
            <div
              class="charcoal-modal-header-title"
            >
              react/Title
            </div>
          </div>
          <div
            class="charcoal-modal-body"
          >
            <div
              style="display: grid; gap: 24px;"
            >
              <div
                style="font-size: 14px; line-height: 22px; padding: 0px 16px;"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
              </div>
              <div
                class="charcoal-modal-align"
              >
                <div
                  aria-disabled="false"
                  class="charcoal-text-field-root"
                >
                  <div
                    class="charcoal-field-label-root"
                  >
                    <label
                      class="charcoal-field-label"
                      for="test-id"
                      id="test-id"
                    >
                      Name
                    </label>
                    <div
                      class="charcoal-field-label-sub-label"
                    >
                      <span />
                    </div>
                  </div>
                  <div
                    class="charcoal-text-field-container"
                    data-invalid="false"
                  >
                    <input
                      aria-labelledby="test-id"
                      class="charcoal-text-field-input"
                      data-invalid="false"
                      id="test-id"
                      placeholder="Nagisa"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="charcoal-modal-align"
              >
                <div
                  aria-disabled="false"
                  class="charcoal-text-field-root"
                >
                  <div
                    class="charcoal-field-label-root"
                  >
                    <label
                      class="charcoal-field-label"
                      for="test-id"
                      id="test-id"
                    >
                      Country
                    </label>
                    <div
                      class="charcoal-field-label-sub-label"
                    >
                      <span />
                    </div>
                  </div>
                  <div
                    class="charcoal-text-field-container"
                    data-invalid="false"
                  >
                    <input
                      aria-labelledby="test-id"
                      class="charcoal-text-field-input"
                      data-invalid="false"
                      id="test-id"
                      placeholder="Tokyo"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="charcoal-modal-buttons"
            >
              <button
                class="charcoal-button"
                data-full-width="true"
                data-variant="Primary"
              >
                Apply
              </button>
              <button
                class="charcoal-button"
                data-full-width="true"
              >
                Cancel
              </button>
            </div>
          </div>
          <button
            aria-label="Close"
            class="charcoal-icon-button charcoal-modal-close-button"
            data-active="false"
            data-size="S"
            data-variant="Default"
            type="button"
          >
            <pixiv-icon
              name="24/Close"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/Modal > NotDismmissableStory 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      data-overlay-container="true"
    >
      <button
        aria-hidden="true"
        class="charcoal-button"
      >
        Open Modal
      </button>
      <div
        class="charcoal-modal-background"
        data-bottom-sheet="false"
        style="z-index: 10;"
      >
        <div
          class="charcoal-modal-dialog"
          data-bottom-sheet="false"
          data-size="M"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="charcoal-modal-header-root"
            data-bottom-sheet="false"
          >
            <div
              class="charcoal-modal-header-title"
            >
              react/Title
            </div>
          </div>
          <div
            class="charcoal-modal-body"
          >
            <div
              style="display: grid; gap: 24px;"
            >
              <div
                style="font-size: 14px; line-height: 22px; padding: 0px 16px;"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
              </div>
            </div>
            <div
              class="charcoal-modal-buttons"
            >
              <button
                class="charcoal-button"
                data-full-width="true"
                data-variant="Primary"
              >
                OK
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
